incorporate suggestions